Update Login, Registration. Add vendor registration

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".mainScreen"></activity>
+        <activity android:name=".nextRegister"></activity>
+        <activity android:name=".vendorRegister" />
+        <activity android:name=".mainScreen" />
         <activity android:name=".registration" />
         <activity android:name=".MainActivity">
             <intent-filter>
