--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--Authors: Jeremy, Josh, Osman, Ishmeet-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.login">
 
