--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".vendorLogin"></activity>
+
+        <activity android:name=".orders" />
+        <activity android:name=".vendorLogin" />
         <activity android:name=".appliances" />
         <activity android:name=".paymentScreen" />
         <activity android:name=".vendorMainScreen" />
