--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".electrical"></activity>
+        <activity android:name=".settings"></activity>
+        <activity android:name=".electrical" />
         <activity android:name=".plumbing" />
         <activity android:name=".orders" />
         <activity android:name=".vendorLogin" />
