--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="ServeMe System"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/logo_dark"
+        android:label="SMS"
+        android:roundIcon="@drawable/logo_dark"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".addServices"></activity>
