--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,8 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.example.login"
-        minSdkVersion 16
+        minSdkVersion 19 //change back to 16 if errors show upleading to stripe
+        multiDexEnabled true // line 8 comment
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -20,6 +21,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.stripe:stripe-android:12.6.0'//stripe sdk
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
