--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.login">
-    <uses-sdk tools:overrideLibrary="com.google.android.gms.all"/>
-    <!-- line 3 & 5 overrides minsdk for stripe use -->
+    <uses-sdk tools:overrideLibrary="com.google.android.gms.all" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +11,8 @@
         android:roundIcon="@drawable/logo_dark"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".addServices"></activity>
+        <activity android:name=".CheckoutActivity"  android:exported="true"/>
+        <activity android:name=".addServices" />
         <activity android:name=".chooseVendor" />
         <activity android:name=".pest_control" />
         <activity android:name=".home_repair" />
